[Feature] Mise en place du Javascript pour gérer la logique et l'interactivité

--- a/src/output.css
+++ b/src/output.css
@@ -695,6 +695,9 @@
   .bg-gray-50 {
     background-color: var(--color-gray-50);
   }
+  .bg-green-600 {
+    background-color: var(--color-green-600);
+  }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
   }
